# rustytype

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs  results.rs  tui.rs
